[project]
name = "recurrentppo-regime"
version = "0.1.0"
description = "Nikkei 225 trading agent with RecurrentPPO + HMM regime detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.9.0",
    "gym==0.25.2",
    "gym-notices==0.1.0",
    "gymnasium==1.2.0",
    "hmmlearn>=0.3.2",
    "pandas<3.0",
    "plotly>=6.6.0",
    "sb3-contrib>=2.8.0",
    "shimmy>=2.0.0",
    "stable-baselines3[extra]>=2.7.1",
    "torch==2.8.0",
    "yfinance>=1.2.0",
]
