[project]
name = "try18res-py12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.9.0",
    "gym==0.25.2",
    "gym-notices==0.1.0",
    "gymnasium==1.2.0",
    "pandas<3.0",
    "pandas-datareader>=0.10.0",
    "plotly>=6.6.0",
    "sb3-contrib>=2.8.0",
    "shimmy>=2.0.0",
    "stable-baselines3[extra]>=2.7.1",
    "torch==2.8.0",
    "yfinance>=1.2.0",
]
